update the add images funciton

--- a/BooksManager/BooksManager/BooksManager.csproj
+++ b/BooksManager/BooksManager/BooksManager.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Remove="Views\Account\AccessDenied.cshtml.cs" />
+    <Compile Remove="Views\Books\Create.cshtml.cs" />
   </ItemGroup>
 
   <ItemGroup>
